project: async-profiler profile and dependency
To run with the profiler loaded:

```
lein with-profile async-profiler repl
```

then in the REPL:

```
(require '[clj-async-profiler.core :as prof])
(prof/profile (require 'java-time))
(prof/serve-files 8080)
```